<resources>
    <string name="app_name">AnimePeak</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_video_player">VideoPlayer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cannot_find_anime">Cannot Find Anime \' Anime name\' </string>
    <string name="anime_name">Anime Name</string>
    <string name="episodes">Episodes:</string>
    <string name="sources">Sources</string>
    <string name="settings">Settings</string>
    <string name="zoro">Zoro</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings_str">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="your_favorites_will_show_here">Your Favorites will show here</string>
    <string name="something_went_wrong_please_check_your_network_connection">Something went wrong. Please Check your network connection</string>
    <string name="auto_search_for_updates">Auto-search for updates</string>
    <string name="default_web_client_id">273585373512-ulh0robojhitbg80klj6i07b6op90qb7.apps.googleusercontent.com</string>
    <string name="something_went_wrong">Something went wrong. Please Check your network connection</string>
    <string name="previous">previous</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="play">Play</string>
    <string name="rewind">Rewind</string>
    <string name="pause">Pause</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="quality">Quality</string>
    <string name="naruto_shippuden">Naruto Shippuden</string>
    <string name="loading">Loading....</string>
    <string name="anime_image">Anime Image</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="profile">Profile</string>
    <string name="profile_background">Profile Background</string>
    <string name="banner">Banner</string>
    <string name="profile_image">Profile image</string>
    <string name="john_doe">John Doe</string>
    <string name="log_out">Log Out</string>
    <string name="example">Example</string>
    <string name="_100">100</string>
    <string name="favourites">Favourites</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="more_loading">More Loading</string>
    <string name="video">Video</string>
    <string name="default_qaulity">Default Qaulity</string>
    <string name="update">Update</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="check_for_newer_version_of_the_app">Check for newer version of the app</string>
    <string name="romantic">Romantic</string>
    <string-array name="source_list">
        <item>GogoAnime</item>
        <item>Zoro</item>

    </string-array>
    <string-array name="quality_list">
        <item>360p</item>
        <item>480p</item>
        <item>720p</item>
        <item>1080p</item>

    </string-array>
</resources>