<<<<<<< HEAD
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        app:itemIconTint="@null"
        app:itemTextAppearance="@null" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:itemIconTint="@null"
        app:itemTextAppearance="@null" />
    <item
        android:id="@+id/fav"
        android:icon="@drawable/baseline_favorite_unselected"
        android:title="@string/favourite"
        app:itemIconTint="@null"
        app:itemTextAppearance="@null" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings_str"
        app:itemIconTint="@null"
        app:itemTextAppearance="@null" />

=======
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"
        app:itemIconTint="@null"
        app:itemTextAppearance="@null" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:itemIconTint="@null"
        app:itemTextAppearance="@null" />
    <item
        android:id="@+id/fav"
        android:icon="@drawable/baseline_favorite_unselected"
        android:title="@string/favourite"
        app:itemIconTint="@null"
        app:itemTextAppearance="@null" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/settings_str"
        app:itemIconTint="@null"
        app:itemTextAppearance="@null" />

>>>>>>> 5ae3732 (Removed Zoro,Added infinte scroll (#23),Changed from few depreciated api to latest,Fixed few bugs)
</menu>