<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".Activity.ProfileActivity">

    <LinearLayout
        android:id="@+id/profile_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/profile_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile_background"
            android:padding="10dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:fontFamily="@font/font"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="2dp"
            android:text="@string/profile"
            android:textColor="@color/white"
            android:textSize="25sp" />


    </LinearLayout>
    <!-- Banner -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/profile_title_bar">

        <androidx.cardview.widget.CardView
            android:id="@+id/banner_card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="5dp"
            android:elevation="12dp"
            android:translationZ="-10dp"
            app:cardCornerRadius="10dp">

            <ImageView
                android:id="@+id/bannerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/banner"
                android:scaleType="centerCrop"
                android:src="@raw/banner" />
        </androidx.cardview.widget.CardView>
        <!-- Header Section -->
        <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="140dp"
            android:gravity="center"

            android:orientation="vertical"
            android:padding="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_card"
                android:layout_width="100dp"
                android:layout_height="100dp"

                android:layout_marginBottom="5dp"
                android:elevation="12dp"
                app:cardCornerRadius="60dp">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:contentDescription="@string/profile_image"
                    android:scaleType="centerCrop"
                    android:src="@raw/boy1" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/john_doe"
                android:textColor="@color/white"

                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"

            android:layout_centerInParent="true"

            android:padding="10dp" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/headerLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/log_out"
            android:textColor="@color/white" />


    </RelativeLayout>
</RelativeLayout>
